Add acknowledgements to all INL1Written scenario chapters
Add acknowledgement sections crediting Daniel Bosk, Dan-Claude van Thropic,
and contributing students from DD2520 Applied Cryptography:
- 2024.tex Ch1 (Camera Signatures): Spring 2024 students
- 2024.tex Ch2 (Bot Detection): No student assignment
- 2025a.tex (Police Body Cams): Spring 2025 students (March submissions)
- 2025b.tex (Parcel Boxes): Late 2025 resubmissions (3 students)

Also fixes typo: Thransen -> Thropic in author name.

--- a/project/2024.tex
+++ b/project/2024.tex
@@ -925,6 +925,56 @@ Several aspects of camera signature systems remain active areas of development:
 \end{exercise}
 
 
+\section*{Acknowledgements}
+
+This chapter was written by Daniel Bosk with the assistance of Dan-Claude van 
+Thropic.
+The following students from DD2520 Applied Cryptography, Spring 2024, 
+contributed additional perspectives through their solutions to the INL1Written 
+assignment:
+Adam Genell,
+Adam Hasselwander,
+Alex Kaufmann,
+Antoine Missue,
+Anton Rådberg,
+Arber Limani,
+Casper Kristiansson,
+Daniel Lai Wikström,
+Diogo Torres Correia,
+Eusebiu Volostiuc,
+Felipe Andrés José San Martín Irarrázabal,
+Fredrik Gölman,
+Gustav Andersson Kasche,
+Gustav Henningsson,
+Hassan El Ghamri,
+Jakub Ruzicka,
+Jonas Liley,
+Kristina Skrebutenas,
+Ludvig Christensen,
+Lukas Gamard,
+Marco Campione,
+Mateus Monteiro Marinheiro,
+Max Engman,
+Maximilian Mannila,
+Mengtian Li,
+Mille af Rolén,
+Minh Quang Nguyen,
+Nicole Wijkman,
+Peter Daniel,
+Qikun Tian,
+Rafael Mealha Fino Serra e Oliveira,
+Richard Palm,
+Roni Henareh,
+Sam Maltin,
+Sina Khoraman,
+Sofia Edvardsson,
+Tilda Jansson,
+Tomi Toma,
+Tom Sorger,
+Viktor Fornstad,
+and
+Viktor Johansson Baurne.
+
 
 \chapter{Detecting bot networks via digital signatures}\label{TwitterSignature}
 \chapterprecis{%
@@ -1441,3 +1491,9 @@ research:
   What cryptographic primitives would you use?
   What are the main challenges?
 \end{exercise}
+
+
+\section*{Acknowledgements}
+
+This chapter was written by Daniel Bosk with the assistance of Dan-Claude van 
+Thropic.
