--- a/project/2025a.tex
+++ b/project/2025a.tex
@@ -1273,3 +1273,87 @@ development:
   What cryptographic primitives would you use?
   What are the main challenges?
 \end{exercise}
+
+
+\section*{Acknowledgements}
+
+This chapter was written by Daniel Bosk with the assistance of Dan-Claude van 
+Thropic.
+The following students from DD2520 Applied Cryptography, Spring 2025, 
+contributed additional perspectives through their solutions to the INL1Written 
+assignment:
+Albin Durfors,
+Alexander Skalski,
+Alexander Wigren,
+Alex Shariat Zadeh,
+Amin Nouiser,
+Anass Inani,
+Anica Krüger,
+Anna Akopyan,
+Anton Brömster,
+Ayah Babiker,
+Azeez Daoud,
+Baltzar Lagerros,
+Birger Karlsson,
+Christoffer Eklund,
+Christoforos Seas,
+Deniel Kenadid Saskin,
+Eduardo Santos Rodriguez,
+Edwin Ahlstrand,
+Elias Nygren,
+Ellen Sigurðardóttir,
+Emil Göransson,
+Emil Hultcrantz,
+Emil Kanerva,
+Emil Wallgren,
+Eva Sophia Schreyer,
+Ferran Solanes Serrat,
+Fredrik Blomqvist,
+Giovanni Prete,
+Gustav Jenner,
+Hassan El Ghamri,
+Jakub Rybak,
+Jannis Alexander Wunderlich,
+Joakim Sundman,
+Jonas Dåderman,
+Jonathan Shahi,
+Juan Trillo Carreras,
+Kenan Dizdarevic,
+Kinan Haj Rashid,
+Lage Hahn Linusson,
+Leo Hansson Åkerberg,
+Leonard Lindgren,
+Linda Widell,
+Ludvig Alhanko,
+Lukas Lannge,
+Manjot Kaur Lidher,
+Måns Abrahamsson,
+Mathias Grindsäter,
+Mathias Magnusson,
+Mattias Ritze,
+Max Andersson,
+Melvin Sandberg,
+Miguel Pinheiro Coelho,
+Miguel Valgañon Soria,
+Nils Eric Jordan,
+Oscar George Judd,
+Oskar Vesterlund,
+Paula Sopena Coello,
+Pontus Hashmi Hector,
+Praveen Kannappan Manikandan,
+Sever Mihai Nastase,
+Shreyas Sawai,
+Simon Michel Jean-Noël Hamelin,
+Stella Carlsson,
+Thi Huyen Trang Nguyen,
+Timothy Lindquist Marongiu,
+Tim Rundström,
+Tomás Silva da Fonseca,
+Tony Kiplagat Cheptoo,
+Victor Österman,
+William Hedenskog,
+Woojin Kim,
+Yan Zhi Bryan Lim,
+Zhichao Zhou,
+and
+Zhi Yong Lim.
