--- a/project/2025b.tex
+++ b/project/2025b.tex
@@ -1194,3 +1194,15 @@ Several aspects of parcel box systems remain active areas of development:
   What cryptographic primitives would you use?
   What are the main challenges?
 \end{exercise}
+
+
+\section*{Acknowledgements}
+
+This chapter was written by Daniel Bosk with the assistance of Dan-Claude van 
+Thropic.
+The following students from DD2520 Applied Cryptography, Spring 2025, 
+contributed additional perspectives through their solutions to the INL1Written 
+assignment:
+Amin Nouiser,
+Emil Wallgren,
+Praveen Kannappan Manikandan.
