Removes dates from overview lecture

--- a/course-overview/contents.tex
+++ b/course-overview/contents.tex
@@ -255,7 +255,7 @@
 \begin{frame}[fragile]
   \begin{block}{INL1}
     \begin{itemize}
-      \item	INL1Quiz Cryptographic Concepts 2024
+      \item	INL1Quiz Cryptographic Concepts, split per lecture
       \item	INL1Written
       \item	INL1Oral
     \end{itemize}
@@ -268,11 +268,11 @@
       \item Most can be done at any time.
       \item Some have a specified lab session.
         \begin{itemize}
-          \item MANDATORY Seminar (31/1): usability (Sonja)  ON CAMPUS
-          \item MANDATORY Seminar (pick 6/2): Impact considerations around 
-            crypto systems (Sonja)  ON CAMPUS
-          \item MANDATORY Lab (20-21/2): Introduction to ProVerif  (Karl and 
-            Jesper)  ON CAMPUS
+          \item MANDATORY Seminar: usability (Sonja)  ON CAMPUS
+          \item MANDATORY Seminar: Impact considerations around crypto systems 
+            (Sonja)  ON CAMPUS
+          \item MANDATORY Lab: Introduction to ProVerif  (Karl and Jesper)  ON 
+            CAMPUS
         \end{itemize}
       \item All assignments are individual.
     \end{itemize}
